# compexp-nli

./: .gitignore  README.md  diff.py  flake.nix  pick_results.py  pyproject.toml  requirements.txt
analyze_llm/: ablate.py  analyze_llm.py  hook.py  plot_ablation.ipynb  pyproject.toml  sentence.py  settings.py
analyze_llm/vis/: sentence_report.py
code/: analyze.py  analyze_llm.py  settings.py
exp/snli_1.0_dev-6-sentence-5/: result.csv
finetune/: main.py  main_sft.py  print_model_layers.py  pyproject.toml
finetune/model/checkpoint-1000/: README.md  adapter_config.json  adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
finetune/model/checkpoint-1000-lin/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
inference/: autoscale.py  chat_eval.py  eval.py  lora_loader.py  main.py  mp_chat_eval.py  orchestrator.py  questions.json  token_eval.py  tokenize_check.py
