[project]
name = "compexp-nli"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.12.*"
dependencies = [
    "cython>=3.2.4",
    "huggingface-hub[cli]>=0.36.2",
    "imageio>=2.37.2",
    "matplotlib>=3.10.6",
    "nltk>=3.9.2",
    "numpy<1.27.0",
    "opennmt-py>=3.5.1",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pyeda>=0.29.0",
    "pyparsing==2.4.7",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "torch>=2.2.2",
    "tqdm>=4.67.1",
    "transformers<5.0.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"
]
