[project]
name = "compexp-finetune"
version = "0.1.0"
description = "NLI reasoning with GRPO/SFT on LiquidAI LFM"
requires-python = "==3.12"
dependencies = [
    "transformers>=4.40.0",
    "trl[vllm]>=0.8.0",
    "peft>=0.10.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
    "torch>=2.1.0",
    "wandb",
    "liger-kernel>=0.4.0",
    "flash_attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.16/flash_attn-2.8.3+cu128torch2.9-cp312-cp312-linux_x86_64.whl"
]

[project.optional-dependencies]
all = [
    "vllm>=0.4.0",
    "liger-kernel>=0.4.0",
]


